[package]
name = "ivms101"
version = "0.1.0"
authors = ["21 Analytics <info@21analytics.ch>"]
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.70"
description = "A library to handle Intervasp Messaging Standard Payloads"
documentation = "https://docs.rs/ivms101/"
homepage = "https://21analytics.ch"
repository = "https://gitlab.com/21analytics/ivms101"
keywords = ["ivms101", "travel-rule", "trp"]
categories = ["finance"]

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = [ "serde", "clock" ] }
lei = { path = "../lei", package = "leim" }
serde = { version = "1.0.163", features = [ "derive" ] }
thiserror = "1.0.40"

[dev-dependencies]
serde_json = "1.0.96"
serde_test = "1.0.163"
